Thu Feb 28 21:10:47 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups: Add 3-phase variables (based on MGE Galaxy).

Thu Feb 28 15:57:24 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 * drivers/bestups:
   - add 'input.voltage.nominal' and 'output.voltage.nominal'
   - new option 'battvoltmult' allows setting a multiplication
     factor for devices that report only a fraction of the battery
     string voltage.
   - corrected 'battery.voltage.nominal' to comply with NUT standard.
   - user overrides should be unconditional, the driver should not
     attempt to silently correct/ignore values.
   - display 'battery.charge' with resolution of one decimal (which is
     probably way more than the precision of the calculation).
   - updated man page.

Tue Feb 26 19:24:48 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/hidparser.c: If a HID path for a report ends in 0x00000000,
   it will not be made available. These are continuations of previous
   objects (that we can't handle anyway). Instead, we will only use
   them to calculate the size of the report.
 - drivers/libhid.c: We no longer need to skip the reports above.

Mon Feb 25 20:38:45 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/hidparser.c: Allocate twice the maximum number of reports
   we expect (MAX_REPORTS), to allow for bogus/duplicate reports.

Mon Feb 25 13:04:24 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - man/Makefile.am: Include netxml-ups man page in distribution.

Mon Feb 25 12:34:32 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 * data/driver.list:
   - add APC BACK-UPS XS LCD (reported by Chad Miller),
   - USB completion for Powerware (for PW5115 and PW9120)

Sun Feb 24 21:36:23 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - man/netxml-ups.8: Add manual page for 'netxml-ups' driver (shameless
   copy from the 'mge-xml' man page with some additional comments).

Sun Feb 24 20:31:59 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
